# openjd-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  hatch.toml  hatch_version_hook.py  pyproject.toml  requirements-development.txt  requirements-release.txt  requirements-testing.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: code_quality.yml  publish.yml  release.yml  release_publish.yml  reuse_python_build.yml
scripts/: add_copyright_headers.sh
src/openjd/: __main__.py
src/openjd/cli/: _create_argparser.py
src/openjd/cli/_check/: __init__.py  _check_command.py
src/openjd/cli/_common/: __init__.py  _job_from_template.py  _validation_utils.py
src/openjd/cli/_run/: __init__.py  _run_command.py
src/openjd/cli/_run/_local_session/: _actions.py  _logs.py  _session_manager.py
src/openjd/cli/_schema/: __init__.py  _schema_command.py
src/openjd/cli/_summary/: __init__.py  _summary_command.py  _summary_output.py
test/openjd/: test_main.py
test/openjd/cli/: __init__.py  conftest.py  test_check_command.py  test_common.py  test_local_session.py  test_run_command.py  test_schema_command.py  test_summary_command.py
